Record lints, fix ch2 problem

--- a/latex/ch1.tex
+++ b/latex/ch1.tex
@@ -74,6 +74,6 @@ My second contribution in this thesis is the adaptation of the reference Open-Un
 
 \subsection{Outline}
 
-This thesis is organized as follows. In Chapter two, I will cover the background of acoustic signals, frequency analysis, and the important transforms in this thesis including the Fourier Transform, STFT, CQT, NSGT, and sliCQT. I will also present an overview of machine learning for audio and music signals, an introduction to a few recurring software and Python code concepts, and a survey on the history of music source separation and music demixing. In Chapter three, I will describe the methodology for the two objectives of the thesis, which are the PyTorch adaptation of the NSGT/sliCQT library, and the replacement of the STFT with the sliCQT inside Open-Unmix. In chapter four, I will show the experimental results, and in chapter five I will discuss the results and conclude the thesis.
+This thesis is organized as follows. In Section \ref{sec:background}, I will cover the background of acoustic signals, frequency analysis, and the important transforms in this thesis including the Fourier Transform, STFT, CQT, NSGT, and sliCQT. I will also present an overview of machine learning for audio and music signals, an introduction to a few recurring software and Python code concepts, and a survey on the history of music source separation and music demixing. In Section \ref{sec:methodology}, I will describe the methodology for the two objectives of the thesis, which are the PyTorch adaptation of the NSGT/sliCQT library, and the replacement of the STFT with the sliCQT inside Open-Unmix. In Section \ref{sec:experiment}, I will show the experimental results, and in Section \ref{sec:results} I will discuss the results and conclude the thesis.
 
 \end{document}
