--- a/latex/ch5.tex
+++ b/latex/ch5.tex
@@ -12,6 +12,7 @@ General tips:\\
    More redundancy (restate hypothesis, goals)
 }
 \section{Discussion and conclusion}
+\label{sec:results}
 
 In this section, we will discuss the results shown in Section \ref{sec:experiment}, and conclude this thesis.
 
