--- a/latex/ch5.tex
+++ b/latex/ch5.tex
@@ -10,8 +10,8 @@ Methods of music demixing based on the STFT have addressed the time-frequency li
 
 The sliced Constant-Q Transform (sliCQT) is a realtime implementation of the Nonstationary Gabor Transform (NSGT). The NSGT and sliCQT provide a method for computing time-frequency transforms with complex-valued Fourier coefficients and a perfect inverse, originally designed to implement an invertible CQT, but they support arbitrary, nonuniform frequency scales.
 
-In this thesis, the sliCQT was explored as a replacement of the STFT in UMX and X-UMX, in a newly proposed model called xumx-sliCQ. The goal was to check whether the improved time-frequency resolution of the sliCQT combined with an appropriately-chosen frequency scale could improve the STFT-based music demixing performance of UMX and X-UMX. Unfortunately, the proposed model, xumx-sliCQ, failed to improve on UMX and X-UMX. However, the creation of xumx-sliCQ in this thesis led to several contributions to the current Python ecosystem of music demixing.
+In this thesis, the sliCQT was explored as a replacement of the STFT in UMX and X-UMX, in a newly proposed model called xumx-sliCQ. The goal was to use the sliCQT with an appropriately-chosen frequency scale to see if it could improve the STFT-based music demixing performance of UMX and X-UMX. Unfortunately, the proposed model, xumx-sliCQ, failed to improve on UMX and X-UMX. However, the creation of xumx-sliCQ in this thesis led to several contributions to the current Python ecosystem of music demixing.
 
-First, the PyTorch implementation of the NSGT/sliCQT allowed these transforms to be used in future GPU neural networks, and it improved the performance of computing the transforms by \textasciitilde3.4-4.7x over the original library, depending on whether the CPU or GPU is used. Second, the CuPy implementation of the BSS (Blind Source Separation) metrics library sped up the evaluation of music demixing quality by 2-2.5x. Finally, xumx-sliCQ demonstrated the first working prototype of a sliCQT-based music demixing neural network using the GPU and PyTorch, and different frequency scales or network architectures may achieve greater success in the future.
+First, the PyTorch implementation of the NSGT/sliCQT allows these transforms to be used in future GPU neural networks, and it improved the performance of computing the transforms by \textasciitilde3.4-4.7x over the original library, depending on whether the CPU or GPU is used. Second, the CuPy speedup of the BSS (Blind Source Separation) metrics library can reduce the time taken for music demixing and source separation evaluations by 2-2.5x. Finally, xumx-sliCQ demonstrated the first working prototype of a sliCQT-based music demixing neural network using the GPU and PyTorch, and different frequency scales or network architectures may achieve greater success in the future.
 
 \end{document}
